--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bot_google_discord",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only index.ts --ignore node_modules"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts --ignore node_modules"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.0",
