--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,14 @@
         "@typescript-eslint"
     ],
     "rules": {
-      "no-console":"off"
+      "no-console":"off",
+      "import/extensions": "off"
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+            "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        }
+    }
     }
 }
