--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "discord.js": "^12.3.1",
-    "puppeteer": "^5.2.1"
+    "puppeteer": "^5.2.1",
+    "wikijs": "^6.0.1"
   }
 }
