--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts --ignore node_modules",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.0",
