--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "wikijs": "^6.0.1"
